Mobile Thanks page fix? Hamburger menu now works on mobile for help page again

--- a/mobilefriendlycss.css
+++ b/mobilefriendlycss.css
@@ -9,6 +9,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   min-height: 100%;
+  max-height: 9000%;
 
 
   font-family: 'Hind', sans-serif;
@@ -212,11 +213,6 @@ img {
 .custom-dropdown::after {
   color: rgba(0,0,0,.4);
 }
-
-
-
-
-
 
 
 /* Custom Scrollbar */
